--- a/Src/Altitude/Air/Air.csproj
+++ b/Src/Altitude/Air/Air.csproj
@@ -1,17 +1,17 @@
-﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5ECF741E-32FB-420C-8852-24FDE4F37CB7}</ProjectGuid>
+    <ProjectGuid>{A4DEB585-0932-4DA0-96E7-3C2A82E43130}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Altitude.Tests</RootNamespace>
-    <AssemblyName>Altitude.Tests</AssemblyName>
+    <RootNamespace>Altitude.Air</RootNamespace>
+    <AssemblyName>Altitude.Air</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,24 +31,38 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
-    <Reference Include="nunit.mocks, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data.DataSetExtensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AltitudeTest.cs" />
+    <Compile Include="Air.cs" />
+    <Compile Include="AirConfiguration.cs" />
+    <Compile Include="Edge.cs" />
+    <Compile Include="EdgeDef.cs" />
+    <Compile Include="EdgeEx.cs" />
+    <Compile Include="Entity.cs" />
+    <Compile Include="IO\NodeReader.cs" />
+    <Compile Include="IO\NodeWriter.cs" />
+    <Compile Include="IService.cs" />
+    <Compile Include="Node.cs" />
+    <Compile Include="NodeDef.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Property.cs" />
+    <Compile Include="PropertyDef.cs" />
+    <Compile Include="Transaction.cs" />
+    <Compile Include="Worker.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Altitude\Altitude.csproj">
-      <Project>{A4DEB585-0932-4DA0-96E7-3C2A82E43130}</Project>
-      <Name>Altitude</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
