--- a/Src/Altitude/Altitude.Common/Altitude.Common.csproj
+++ b/Src/Altitude/Altitude.Common/Altitude.Common.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -49,6 +49,15 @@
     <Compile Include="IO\FileSystem.cs" />
     <Compile Include="IO\Local\LocalFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IO\Directory.cs" />
+    <Compile Include="IO\FileBlock.cs" />
+    <Compile Include="IO\FileInfo.cs" />
+    <Compile Include="IO\FileMode.cs" />
+    <Compile Include="IO\FileSystemException.cs" />
+    <Compile Include="IO\FileSystemStream.cs" />
+    <Compile Include="IO\Local\LocalFileSystemException.cs" />
+    <Compile Include="IO\Local\LocalFileSystemStream.cs" />
+    <Compile Include="IO\Path.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
