--- a/Src/Altitude/Altitude.Crust/Altitude.Crust.csproj
+++ b/Src/Altitude/Altitude.Crust/Altitude.Crust.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="IO\Crust\CrustFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Crust\Client\CrustClient.cs" />
+    <Compile Include="Crust\Server\CrustServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Altitude.Common\Altitude.Common.csproj">
@@ -55,8 +57,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Crust\" />
     <Folder Include="Crust\Client\" />
-    <Folder Include="Crust\Protocol\" />
     <Folder Include="Crust\Server\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
