Interfaces added to chop up project

--- a/Src/Chat/Chat.WebUI/Web.config
+++ b/Src/Chat/Chat.WebUI/Web.config
@@ -12,32 +12,24 @@
 				</sectionGroup>
 			</sectionGroup>
 		</sectionGroup>
-    <sectionGroup name="jayrock">
-      <sectionGroup name="jsonrpc">
-        <section
-            name="features"
-            type="Jayrock.JsonRpc.Web.JsonRpcFeaturesSectionHandler, Jayrock" />
-      </sectionGroup>
-    </sectionGroup>
-  </configSections>
-  <jayrock>
-    <jsonrpc>
-      <features>
-        <add name="rpc"
-             type="Jayrock.JsonRpc.Web.JsonRpcExecutive, Jayrock" />
-        <add name="getrpc"
-             type="Jayrock.JsonRpc.Web.JsonRpcGetProtocol, Jayrock" />
-        <add name="proxy"
-             type="Jayrock.JsonRpc.Web.JsonRpcProxyGenerator, Jayrock" />
-        <add name="pyproxy"
-             type="Jayrock.JsonRpc.Web.JsonRpcPythonProxyGenerator, Jayrock" />
-        <add name="help"
-             type="Jayrock.JsonRpc.Web.JsonRpcHelp, Jayrock" />
-        <add name="test"
-             type="Jayrock.JsonRpc.Web.JsonRpcTester, Jayrock" />
-      </features>
-    </jsonrpc>
-  </jayrock>
+		<sectionGroup name="jayrock">
+			<sectionGroup name="jsonrpc">
+				<section name="features" type="Jayrock.JsonRpc.Web.JsonRpcFeaturesSectionHandler, Jayrock"/>
+			</sectionGroup>
+		</sectionGroup>
+	</configSections>
+	<jayrock>
+		<jsonrpc>
+			<features>
+				<add name="rpc" type="Jayrock.JsonRpc.Web.JsonRpcExecutive, Jayrock"/>
+				<add name="getrpc" type="Jayrock.JsonRpc.Web.JsonRpcGetProtocol, Jayrock"/>
+				<add name="proxy" type="Jayrock.JsonRpc.Web.JsonRpcProxyGenerator, Jayrock"/>
+				<add name="pyproxy" type="Jayrock.JsonRpc.Web.JsonRpcPythonProxyGenerator, Jayrock"/>
+				<add name="help" type="Jayrock.JsonRpc.Web.JsonRpcHelp, Jayrock"/>
+				<add name="test" type="Jayrock.JsonRpc.Web.JsonRpcTester, Jayrock"/>
+			</features>
+		</jsonrpc>
+	</jayrock>
 	<appSettings/>
 	<connectionStrings/>
 	<system.web>
@@ -118,8 +110,7 @@
 		</handlers>
 	</system.webServer>
 	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1" appliesTo="v2.0.50727"><dependentAssembly>
 				<assemblyIdentity name="System.Web.Extensions" publicKeyToken="31bf3856ad364e35"/>
 				<bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0"/>
 			</dependentAssembly>
@@ -127,6 +118,5 @@
 				<assemblyIdentity name="System.Web.Extensions.Design" publicKeyToken="31bf3856ad364e35"/>
 				<bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0"/>
 			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
+		</assemblyBinding></runtime>
 </configuration>
