--- a/Src/Chat/ChatTests.Main/ChatTests.Main.csproj
+++ b/Src/Chat/ChatTests.Main/ChatTests.Main.csproj
@@ -53,8 +53,14 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
-    <Reference Include="nunit.mocks, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Lib\NUnit\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.mocks, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Lib\NUnit\nunit.mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -62,14 +68,15 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Main\Services\CategoryServiceTest.cs" />
+    <Compile Include="Main\Services\CategoryServiceTestBase.cs" />
+    <Compile Include="Main\Services\ConsoleLogServiceTest.cs" />
+    <Compile Include="Main\Services\LogServiceTestBase.cs" />
+    <Compile Include="Main\Services\ServiceLocatorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Main\WikiTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Altitude\Altitude.Common\Altitude.Common.csproj">
-      <Project>{0A5EE4CE-4AA0-4C49-8DFE-DC00EB9404B3}</Project>
-      <Name>Altitude.Common</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Chat.Main\Chat.Main.csproj">
       <Project>{704841F7-1D0D-42F0-89B1-E32085AF4B43}</Project>
       <Name>Chat.Main</Name>
