Implemented more services and improved unit tests and coverage

--- a/Src/Chat/ChatTests.Main/ChatTests.Main.csproj
+++ b/Src/Chat/ChatTests.Main/ChatTests.Main.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Main\Services\CategoryServiceTestBase.cs" />
     <Compile Include="Main\Services\ConsoleLogServiceTest.cs" />
     <Compile Include="Main\Services\LogServiceTestBase.cs" />
+    <Compile Include="Main\Services\MessageServiceTest.cs" />
+    <Compile Include="Main\Services\MessageServiceTestBase.cs" />
     <Compile Include="Main\Services\ServiceLocatorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Main\WikiTest.cs" />
