--- a/Src/Chat/Chat.Main/Chat.Main.csproj
+++ b/Src/Chat/Chat.Main/Chat.Main.csproj
@@ -73,12 +73,13 @@
     <Compile Include="Main\Collections\TrieNode.cs" />
     <Compile Include="Main\Model\ICategoryInfo.cs" />
     <Compile Include="Main\Model\CategoryInfo.cs" />
+    <Compile Include="Main\Model\IMessageInfo.cs" />
+    <Compile Include="Main\Model\MessageInfo.cs" />
     <Compile Include="Main\Services\MessageService.cs" />
     <Compile Include="Main\App\WikipediaChatAppFactory.cs" />
     <Compile Include="Main\Model\Category.cs" />
     <Compile Include="Main\Model\SignUpInfo.cs" />
     <Compile Include="Main\Services\Factories\CategoryFactoryService.cs" />
-    <Compile Include="Main\Model\CategoryWithParents.cs" />
     <Compile Include="Main\App\IChatAppFactory.cs" />
     <Compile Include="Main\Services\ConsoleLogService.cs" />
     <Compile Include="Main\Services\ILogService.cs" />
@@ -89,7 +90,6 @@
     <Compile Include="Main\IO\WikipediaCategoryCursor.cs" />
     <Compile Include="Main\IO\Cursor.cs" />
     <Compile Include="Main\Services\Factories\ICategoryFactoryService.cs" />
-    <Compile Include="Main\Model\ICategoryWithParentCategories.cs" />
     <Compile Include="Main\App\IChatApp.cs" />
     <Compile Include="Main\Model\ISignUpInfo.cs" />
     <Compile Include="Main\Services\IUserFactoryService.cs" />
